--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 	<h2>Help the chicken cross the road</h2>
+	<div id="game"></div>
 	<script src="js/resources.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/engine.js"></script>
-	
 </body>
 </html>
