dynamic game over banner and improved docs

--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Arcade Game</title>
-	<link rel="stylesheet" href="css/style.css">
+	<title>Chicken Arcade @azemoh</title>
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Raleway:400,700">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<h2>Help the chicken cross the road</h2>
-	<div id="game"></div>
+	<div class="rules">
+		<h2>Help the chicken cross the road</h2>
+		<strong>Use the arrow keys to move the chicken</strong>
+	</div>
 	<script src="js/resources.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/engine.js"></script>
