Added social share buttons

--- a/index.html
+++ b/index.html
@@ -5,8 +5,39 @@
 	<title>Chicken Arcade @azemoh</title>
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Raleway:400,700">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.1.1/gh-fork-ribbon.min.css" />
+<!--[if lt IE 9]>
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.1.1/gh-fork-ribbon.ie.min.css" />
+<![endif]-->
 </head>
 <body>
+	<div id="fb-root"></div>
+	<script>(function(d, s, id) {
+		var js, fjs = d.getElementsByTagName(s)[0];
+		if (d.getElementById(id)) return;
+		js = d.createElement(s); js.id = id;
+		js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5";
+		fjs.parentNode.insertBefore(js, fjs);
+	}(document, 'script', 'facebook-jssdk'));</script>
+
+	<!-- TOP RIGHT RIBBON: START COPYING HERE -->
+	<div class="github-fork-ribbon-wrapper right">
+			<div class="github-fork-ribbon">
+					<a href="https://github.com/azemoh/chicken-arcade">Fork me on GitHub</a>
+			</div>
+	</div>
+	<!-- TOP RIGHT RIBBON: END COPYING HERE -->
+
+	<aside class="social-share">
+		<!--Facebook Share-->
+		<div class="fb-like" data-href="http://azemoh.github.io/chicken-arcade/" data-width="70px" data-layout="box_count" data-action="like" data-show-faces="false" data-share="true"></div>
+		<br>
+		<!-- Twitter tweet -->
+		<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://azemoh.github.io/chicken-arcade/" data-text="Play Chicken Arcade" data-hashtags="ChickenArcade">Tweet</a>
+		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+	</aside>
+
+
 	<div class="rules">
 		<h2>Help the chicken cross the road</h2>
 		<strong>Use the arrow keys to move the chicken</strong>
