--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <!--[if lt IE 9]>
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.1.1/gh-fork-ribbon.ie.min.css" />
 <![endif]-->
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
 </head>
 <body>
 	<div id="fb-root"></div>
@@ -30,11 +31,12 @@
 
 	<aside class="social-share">
 		<!--Facebook Share-->
-		<div class="fb-like" data-href="http://azemoh.github.io/chicken-arcade/" data-width="70px" data-layout="box_count" data-action="like" data-show-faces="false" data-share="true"></div>
-		<br>
+		<div class="fb-like" data-href="http://azemoh.github.io/chicken-arcade/" data-width="70px" data-layout="box_count" data-action="like" data-show-faces="false" data-share="true"></div><br>
 		<!-- Twitter tweet -->
-		<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://azemoh.github.io/chicken-arcade/" data-text="Play Chicken Arcade" data-hashtags="ChickenArcade">Tweet</a>
-		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+		<iframe scrolling="no" frameborder="0" allowtransparency="true" src="https://platform.twitter.com/widgets/tweet_button.1352365724.html#_=1354037601139&amp;count=vertical&amp;id=twitter-widget-3&amp;lang=en&amp;original_referer=https%3A%2F%2Fdev.twitter.com%2Fdocs%2Ftweet-button%2Ffaq%23custom-shortener-count&amp;size=m&amp;text=Play%20Chicken%20Arcade&amp;url=http%3A%2F%2Fazemoh.github.io/chicken-arcade/" class="twitter-share-button twitter-count-vertical" style="width: 55px; height: 62px;" title="Play Chicken Arcade" data-twttr-rendered="true"></iframe><br>
+        <!-- Google +1 -->
+        <div class="g-plusone" data-size="tall"></div>
 	</aside>
 
 
