--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 
 	<aside class="social-share">
 		<!--Facebook Share-->
-		<div class="fb-like" data-href="http://azemoh.github.io/chicken-arcade/" data-width="70px" data-layout="box_count" data-action="like" data-show-faces="false" data-share="true"></div><br>
+		<div class="fb-like" data-href="https://azemoh.github.io/chicken-arcade/" data-width="70px" data-layout="box_count" data-action="like" data-show-faces="false" data-share="true"></div><br>
 		<!-- Twitter tweet -->
 		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-		<iframe scrolling="no" frameborder="0" allowtransparency="true" src="https://platform.twitter.com/widgets/tweet_button.1352365724.html#_=1354037601139&amp;count=vertical&amp;id=twitter-widget-3&amp;lang=en&amp;original_referer=https%3A%2F%2Fdev.twitter.com%2Fdocs%2Ftweet-button%2Ffaq%23custom-shortener-count&amp;size=m&amp;text=Play%20Chicken%20Arcade&amp;url=http%3A%2F%2Fazemoh.github.io/chicken-arcade/" class="twitter-share-button twitter-count-vertical" style="width: 55px; height: 62px;" title="Play Chicken Arcade" data-twttr-rendered="true"></iframe><br>
+		<iframe scrolling="no" frameborder="0" allowtransparency="true" src="https://platform.twitter.com/widgets/tweet_button.1352365724.html#_=1354037601139&amp;count=vertical&amp;id=twitter-widget-3&amp;lang=en&amp;original_referer=https%3A%2F%2Fdev.twitter.com%2Fdocs%2Ftweet-button%2Ffaq%23custom-shortener-count&amp;size=m&amp;text=Play%20Chicken%20Arcade&amp;url=https%3A%2F%2Fazemoh.github.io/chicken-arcade/" class="twitter-share-button twitter-count-vertical" style="width: 55px; height: 62px;" title="Play Chicken Arcade" data-twttr-rendered="true"></iframe><br>
         <!-- Google +1 -->
-        <div class="g-plusone" data-size="tall"></div>
+        <div class="g-plusone" data-size="tall" data-href="https://azemoh.github.io/chicken-arcade/"></div>
 	</aside>
 
 
